--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:3.0.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:30.0.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
